Quick fix to hover glitch on the cart linke on mobile menu.

--- a/scss/theme/_mobile-menu.scss
+++ b/scss/theme/_mobile-menu.scss
@@ -19,6 +19,13 @@
     flex-flow: column;
     justify-content: flex-start;
     align-items: flex-start;
+    &__item {
+      &.cart {
+        .link {
+          justify-content: flex-start;
+        }
+      }
+    }
     &__link {
       font-family: var(--theme-font-family--serif--primary);
       font-style: normal;
